# IhorGUI

./: CMakeLists.txt  README.md  install.sh  main.cpp  main.py
cmake/: ihorgui-config.cmake.in  utils.cmake
include/IhorGUI/: IhorGUI.h  button.h  common.h  eventmanager.h  label.h  layoutmanager.h  textbox.h  widget.h  window.h
src/: IhorGUI.cpp  button.cpp  common.cpp  eventmanager.cpp  label.cpp  layoutmanager.cpp  textbox.cpp  widget.cpp  window.cpp
